# sbir-cet-classifier

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.25.0  AGENTS.md  ALL_IMPORT_FIXES_FINAL.md  API_DEBUG_REPORT.md  CLASSIFICATION_PERFORMANCE_REPORT.md  CLI_QUICK_REFERENCE.md  CLI_REORGANIZATION.md  CLI_REORGANIZATION_COMPLETE.md  CLI_REORGANIZATION_STATUS.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCS.md  DUPLICATE_ANALYSIS.md  ENRICHMENT_IMPACT_REPORT.md  FINAL_IMPORT_FIX_SUMMARY.md  GETTING_STARTED.md  IMPORT_FIXES_COMPLETE.md  NIH_API_INTEGRATION_STATUS.md  NIH_API_NEXT_STEPS.md  NIH_API_STATUS.md  NIH_MATCHING_TEST_RESULTS.md  NSF_API_DISCOVERY.md  PERFORMANCE_OPTIMIZATIONS.md  PUBLIC_API_SURVEY.md  README.md  REFACTORING_EXAMPLES.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_SUMMARY.txt  SESSION_COMPLETE_FINAL.md  SESSION_SUMMARY_CLI_REORGANIZATION.md  SPEC_ANALYSIS.md  STATUS.md  TESTING.md  V4_COMPARISON_REPORT.md  V5_FINAL_REPORT.md  WEEK1_REFACTORING_COMPLETE.md  WEEK1_TASK2_CLI_REORGANIZATION.md  (+19 more)
artifacts/: solicitation_cache.db
config/: README.md  classification.yaml  enrichment.yaml  sam_api.yaml  taxonomy.yaml
docs/: CONSOLIDATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  YAML_CONFIG_MIGRATION.md
reports/: nih_classification_report_20251010_153416.json  nih_classification_report_20251010_153729.json  nih_classification_report_20251010_161439.json  nih_classification_report_20251010_172017.json  nih_classification_results_20251010_153416.csv  nih_test_100_report_20251010_181547.json  nsf_classification_report_20251010_162953.json  (+3 more)
(+218 files in other folders)
