[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbir-cet-classifier"
version = "0.1.0"
description = "SBIR award applicability assessment tooling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Conrad Hollomon" }
]
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "spacy>=3.7",
  "pydantic>=2.5",
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pyarrow>=15.0",
  "python-dateutil>=2.9",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-python-dateutil>=2.9",
  "httpx>=0.27"
]

[project.urls]
Homepage = "https://example.com/sbir-nist-classifier"
Source = "https://example.com/sbir-nist-classifier"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sbir_cet_classifier"]
